[package]
name = "racing-wheel-hid-cammus-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Cammus C5/C12 direct drive wheel HID protocol implementation"

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/racing-wheel-hid-cammus-protocol"
readme = "README.md"
keywords = ["cammus", "hid", "usb", "racing", "protocol"]
categories = ["hardware-support", "no-std"]
[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
openracing-pidff-common = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
insta = { version = "1.46.3", features = ["yaml"] }

[lints]
workspace = true
