[package]
name = "racing-wheel-hid-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI tool for capturing raw HID reports from connected racing wheel devices"

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/racing-wheel-hid-capture"
readme = "README.md"
keywords = ["hid", "capture", "usb", "replay", "openracing"]
categories = ["command-line-utilities", "hardware-support"]
[[bin]]
name = "hid-capture"
path = "src/main.rs"


[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
hidapi = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[lints]
workspace = true
