[package]
name = "hid-cube-controls-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cube Controls steering wheel USB HID protocol constants (provisional VID/PIDs)"

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/hid-cube-controls-protocol"
readme = "README.md"
keywords = ["cube-controls", "hid", "usb", "racing", "protocol"]
categories = ["hardware-support", "no-std"]
[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
insta = "1.46.3"

[lints]
workspace = true
