[package]
name = "racing-wheel-hid-ffbeast-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FFBeast USB HID protocol constants and encoders (I/O-free, allocation-free)"
repository = "https://github.com/openracing/openracing"


[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/racing-wheel-hid-ffbeast-protocol"
readme = "README.md"
keywords = ["ffbeast", "hid", "usb", "racing", "protocol"]
categories = ["hardware-support", "no-std"]
[dev-dependencies]
proptest = { workspace = true }
insta = { version = "1.46.3", features = ["yaml"] }

[dependencies]
openracing-pidff-common = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[lints]
workspace = true
