[package]
name = "hid-heusinkveld-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true


[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/hid-heusinkveld-protocol"
readme = "README.md"
description = "Heusinkveld USB HID protocol constants and encoders (I/O-free, allocation-free)"
keywords = ["heusinkveld", "hid", "usb", "racing", "protocol"]
categories = ["hardware-support", "no-std"]
[dependencies]
openracing-hid-common = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
insta = { version = "1.46.3", features = ["yaml"] }

[lints]
workspace = true
