[package]
name = "racing-wheel-hid-leo-bodnar-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Leo Bodnar USB interface HID protocol constants and device classification"

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/racing-wheel-hid-leo-bodnar-protocol"
readme = "README.md"
keywords = ["leo-bodnar", "hid", "usb", "racing", "protocol"]
categories = ["hardware-support", "no-std"]
[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
openracing-pidff-common = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
insta = { version = "1.46.3", features = ["yaml"] }

[lints]
workspace = true
