[package]
name = "racing-wheel-hid-moza-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/racing-wheel-hid-moza-protocol"
readme = "README.md"
description = "Moza Racing USB HID protocol constants and encoders (I/O-free, allocation-free)"
keywords = ["moza", "hid", "usb", "racing", "protocol"]
categories = ["hardware-support", "no-std"]
[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
openracing-hid-common = { workspace = true }
racing-wheel-hbp = { workspace = true }
racing-wheel-ks = { workspace = true }
racing-wheel-moza-wheelbase-report = { workspace = true }
racing-wheel-srp = { workspace = true }
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
insta = { version = "1.46.3", features = ["yaml"] }
serde_json = { workspace = true }

[lints]
workspace = true
