[package]
name = "racing-wheel-hid-openffboard-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "OpenFFBoard USB HID protocol constants and encoders (I/O-free, allocation-free)"
repository = "https://github.com/openracing/openracing"

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/racing-wheel-hid-openffboard-protocol"
readme = "README.md"
keywords = ["openffboard", "hid", "usb", "racing", "protocol"]
categories = ["hardware-support", "no-std"]
[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dev-dependencies]
proptest = "1.9.0"
insta = { version = "1.46.3", features = ["yaml"] }

[dependencies]
openracing-pidff-common = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[lints]
workspace = true
