[package]
name = "racing-wheel-hid-thrustmaster-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/racing-wheel-hid-thrustmaster-protocol"
readme = "README.md"
description = "Thrustmaster USB HID protocol constants and encoders (I/O-free, allocation-free)"
keywords = ["thrustmaster", "hid", "usb", "racing", "protocol"]
categories = ["hardware-support", "no-std"]
[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack", "tracing"]

[dependencies]
openracing-hid-common = { workspace = true }
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
insta = { version = "1.46.3", features = ["yaml"] }

[lints]
workspace = true
