[package]
name = "racing-wheel-input-maps"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/racing-wheel-input-maps"
readme = "README.md"
description = "Unified input mapping structures for racing peripherals"
keywords = ["input", "mapping", "racing", "controller", "hid"]
categories = ["game-development", "data-structures"]
[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
serde = { workspace = true }
racing-wheel-ks = { path = "../ks", version = "0.1.0" }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
