[package]
name = "racing-wheel-ks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/racing-wheel-ks"
readme = "README.md"
description = "Moza KS steering wheel USB HID protocol parsing and support"
keywords = ["moza", "steering-wheel", "hid", "racing", "usb"]
categories = ["hardware-support", "no-std"]
[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]
dev = ["serde_json"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
