[package]
name = "racing-wheel-moza-wheelbase-report"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/racing-wheel-moza-wheelbase-report"
readme = "README.md"
description = "Moza wheelbase HID report definitions and parsing"
keywords = ["moza", "wheelbase", "hid", "racing", "report"]
categories = ["hardware-support", "no-std"]
[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dev-dependencies]
proptest = { workspace = true }

[dependencies]
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[lints]
workspace = true
