[package]
name = "openracing-atomic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RT-safe atomic counters and metrics primitives for OpenRacing"
keywords = ["real-time", "atomic", "metrics", "counters", "no-std"]
categories = ["concurrency", "embedded", "no-std"]


[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack", "crossbeam"]

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/openracing-atomic"
readme = "README.md"
[dependencies]
crossbeam = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"

[features]
default = ["std"]
std = ["crossbeam"]
# Enable lock-free sample queues (requires crossbeam)
queues = ["crossbeam"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
