[package]
name = "openracing-calibration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true


[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/openracing-calibration"
readme = "README.md"
description = "Axis calibration, deadzones, and normalization for racing peripherals"
keywords = ["calibration", "deadzone", "normalization", "axis", "openracing"]
categories = ["game-development", "hardware-support"]
[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
