[package]
name = "openracing-capture-format"
description = "Structured capture format for USB HID reports — enables protocol reverse-engineering and validation without physical hardware."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/openracing-capture-format"
readme = "README.md"
keywords = ["capture", "hid", "format", "replay", "openracing"]
categories = ["data-structures", "hardware-support"]
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }

# Protocol crates used in replay integration tests
racing-wheel-hid-cammus-protocol = { path = "../hid-cammus-protocol", version = "0.1.0" }
racing-wheel-hid-fanatec-protocol = { path = "../hid-fanatec-protocol", version = "0.1.0" }
racing-wheel-hid-simagic-protocol = { path = "../hid-simagic-protocol", version = "0.1.0" }
racing-wheel-hid-thrustmaster-protocol = { path = "../hid-thrustmaster-protocol", version = "0.1.0" }
racing-wheel-hid-vrs-protocol = { path = "../hid-vrs-protocol", version = "0.1.0" }

[lints]
workspace = true
