[package]
name = "openracing-capture-ids"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true


[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

publish = true
homepage = "https://github.com/EffortlessMetrics/OpenRacing"
documentation = "https://docs.rs/openracing-capture-ids"
readme = "README.md"
description = "Hardware identifiers and USB VID/PID constants for HID device captures"
keywords = ["capture", "hid", "usb", "vid-pid", "openracing"]
categories = ["game-development", "hardware-support"]
[dependencies]
crc32fast = { workspace = true }
hidapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
ctrlc = "3.5.2"
racing-wheel-moza-wheelbase-report = { workspace = true }
racing-wheel-hid-logitech-protocol = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }


[lints]
workspace = true
